0.7.1
[+] Added Locale and message customization capabilities.
[+] Added new item fields for Player and CustomModelData.
[+] Added GuiContexts and ContextPriorities. Every item field will default to NORMAL, except PlayerField which is HIGHEST.
[/] ItemFields now expect a GuiContext rather than a player. These contexts can be altered by ItemFields
[/] Refactored arguments for GUI
[/] Mildly refactored commands
[/] Refactored how reload works.